<resources>
    <string name="app_name">FitnessApp</string>

    <string name="don_t_have_an_acccount_yet_register_here">Don\'t have an account? Register here</string>
    <string name="register">Register</string>
    <string name="enter_username">Enter username...</string>
    <string name="enter_email">Enter email...</string>
    <string name="enter_password">Enter password...</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="login">Login</string>
    <string name="statistics">Statistics</string>
    <string name="new_training">New Training</string>
    <string name="enter_year">Enter year...</string>
    <string name="enter_month">Enter month...</string>
    <string name="enter_day">Enter day...</string>
    <string name="enter_training_details">Enter training details...</string>
    <string name="update_training">Update training</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="new_calories">New calories</string>
    <string name="enter_ingredients_for_today">Enter ingredients for today...</string>
    <string name="search_ingredient">Search ingredients</string>
    <string name="ingredients">Ingredients</string>
    <string name="enter_ingredient">Enter ingredient</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="enter_amount">Enter amount in grams...</string>
    <string name="enter_calories_per_1g">Enter calories per 1g...</string>
    <string name="save_ingredient">Save ingredient</string>
    <string name="update_calories">Update calories</string>
</resources>
