<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calories.CalorieDetailsActivity">

    <TextView
        android:id="@+id/textView_calorieDateDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/size_40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="25.08.2019" />

    <TextView
        android:id="@+id/textView_calorieDetailsDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_10"
        android:layout_marginTop="@dimen/size_30"
        android:layout_marginEnd="@dimen/size_10"
        android:textColor="@color/black"
        android:textSize="@dimen/size_25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_calorieDateDetails"
        tools:text="Total calories: 1250kcal " />

    <Button
        android:id="@+id/button_updateCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:paddingStart="@dimen/size_10"
        android:paddingEnd="@dimen/size_10"
        android:text="@string/update_calories"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/size_30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_calorieDetailsDetails" />


    <EditText
        android:id="@+id/editText_enterIngredientDetails"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_15"
        android:layout_marginTop="@dimen/size_25"
        android:layout_marginEnd="@dimen/size_15"
        android:hint="@string/enter_ingredient"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_search"
        app:layout_constraintTop_toBottomOf="@id/button_updateCalories"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/button_searchDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_15"
        android:layout_marginEnd="@dimen/size_15"
        android:background="@color/colorAccent"
        android:text="@string/search"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_updateCalories"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/editText_measurementDetails"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_15"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_enterIngredientDetails"
        />


    <Button
        android:id="@+id/button_addIngredientDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginEnd="@dimen/size_15"
        android:background="@color/colorAccent"
        android:text="@string/add"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_searchDetails" />

    <EditText
        android:id="@+id/editText_enterCaloriesDetails"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_15"
        android:layout_marginTop="@dimen/size_15"
        android:hint="@string/enter_calories_per_1g"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_measurementDetails" />

    <Button
        android:id="@+id/button_saveToBaseDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_15"
        android:background="@color/colorAccent"
        android:paddingStart="@dimen/size_10"
        android:paddingEnd="@dimen/size_10"
        android:text="@string/save_ingredient"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_addIngredientDetails" />

    <Button
        android:id="@+id/button_saveEntryDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30"
        android:background="@color/colorAccent"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_calorieDetailsDetails"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>