<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".training.NewTrainingActivity">

    <TextView
        android:id="@+id/textView_newTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_25"
        android:text="@string/new_training"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/size_30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editText_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_30"
        android:layout_marginTop="@dimen/size_30"
        android:layout_marginEnd="@dimen/size_30"
        android:hint="@string/enter_day"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_newTraining"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editText_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_30"
        android:layout_marginTop="@dimen/size_30"
        android:layout_marginEnd="@dimen/size_30"
        android:hint="@string/enter_month"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_day"
        android:inputType="number"/>


    <EditText
        android:id="@+id/editText_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_30"
        android:layout_marginTop="@dimen/size_30"
        android:layout_marginEnd="@dimen/size_30"
        android:hint="@string/enter_year"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_month"
        android:inputType="number"/>


    <EditText
        android:id="@+id/editText_trainingDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_30"
        android:layout_marginTop="@dimen/size_30"
        android:layout_marginEnd="@dimen/size_30"
        android:fitsSystemWindows="true"
        android:hint="@string/enter_training_details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_year" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabButtonAddTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30"
        android:src="@drawable/ic_done_white_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_trainingDetails" />


</androidx.constraintlayout.widget.ConstraintLayout>