<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.LoginActivity">

    <TextView
        android:id="@+id/register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/size_40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_usernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8"
        android:layout_marginTop="@dimen/size_150"
        android:layout_marginRight="@dimen/size_8"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:paddingLeft="@dimen/size_8"
        android:paddingRight="@dimen/size_8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_label" />

    <EditText
        android:id="@+id/editText_emailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginRight="@dimen/size_8"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/size_8"
        android:paddingRight="@dimen/size_8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_usernameRegister" />


    <EditText
        android:id="@+id/editText_passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginRight="@dimen/size_8"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/size_8"
        android:paddingRight="@dimen/size_8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_emailRegister" />

    <Button
        android:id="@+id/button_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_25"
        android:background="@color/colorPrimaryDark"
        android:text="@string/register"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_passwordRegister" />

    <TextView
        android:id="@+id/loginHere_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_25"
        android:text="@string/already_have_an_account_login_here"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/size_17"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>