<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calories.AddNewCaloriesActivity">

    <TextView
        android:id="@+id/textView_newCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_25"
        android:text="@string/new_calories"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/size_30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editText_dayCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_30"
        android:layout_marginTop="@dimen/size_30"
        android:layout_marginEnd="@dimen/size_30"
        android:hint="@string/enter_day"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_searchIngredients" />

    <EditText
        android:id="@+id/editText_monthCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_30"
        android:layout_marginTop="@dimen/size_30"
        android:layout_marginEnd="@dimen/size_30"
        android:hint="@string/enter_month"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_dayCalories" />


    <EditText
        android:id="@+id/editText_yearCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_30"
        android:layout_marginTop="@dimen/size_30"
        android:layout_marginEnd="@dimen/size_30"
        android:hint="@string/enter_year"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_monthCalories" />

    <Button
        android:id="@+id/button_searchIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_15"
        android:background="@color/colorAccent"
        android:text="@string/search_ingredient"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_newCalories"
        android:paddingStart="@dimen/size_10"
        android:paddingEnd="@dimen/size_10"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_totalCaloriesNewEntry"
        tools:text="Total calories for today: 1250kcal"
        app:layout_constraintTop_toBottomOf="@id/editText_yearCalories"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/size_40"
        android:layout_marginStart="@dimen/size_30"
        android:textSize="@dimen/size_20"
        android:layout_marginEnd="@dimen/size_40"
        />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabButton_saveCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_done_white_24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/size_30"
        android:layout_marginBottom="@dimen/size_30"/>


</androidx.constraintlayout.widget.ConstraintLayout>