<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.LoginActivity">

    <TextView
        android:id="@+id/login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/size_40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_emailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8"
        android:layout_marginRight="@dimen/size_8"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/size_8"
        android:paddingRight="@dimen/size_8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_label"
        android:layout_marginTop="@dimen/size_150"/>


    <EditText
        android:id="@+id/editText_passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginRight="@dimen/size_8"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/size_8"
        android:paddingRight="@dimen/size_8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_emailLogin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editText_passwordLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/size_25"
        android:text="@string/login"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:id="@+id/button_login"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/size_25"
        android:text="@string/don_t_have_an_acccount_yet_register_here"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/size_17"
        android:id="@+id/registerHere_label"
        />


</androidx.constraintlayout.widget.ConstraintLayout>